--- a/lms/templates/static_templates/contact.html
+++ b/lms/templates/static_templates/contact.html
@@ -57,7 +57,7 @@
           </div>
 
           <button type="submit" class="btn primary" id="sendBtn">
-            <span>✉️ ${_("Send message")}</span>
+            <span> ${_("Send message")}</span>
           </button>
 
           <p class="form-hint">
