--- a/lms/templates/footer.html
+++ b/lms/templates/footer.html
@@ -1,86 +1,26 @@
-## ========= FOOTER (Mako, Indigo-compatible) =========
 <%page expression_filter="h"/>
 <%!
   from datetime import datetime
   from django.utils.translation import gettext as _
+  from django.conf import settings                                ## <-- THÊM
   from lms.djangoapps.branding.api import get_footer
   from openedx.core.djangoapps.lang_pref.api import footer_language_selector_is_enabled
 %>
 <%namespace name='static' file='static_content.html'/>
-<% footer = get_footer(is_secure=is_secure) %>
-<% icp_license_info = getattr(settings, 'ICP_LICENSE_INFO', {}) %>
 
-% if uses_bootstrap:
-<div class="wrapper wrapper-footer">
-  <footer id="footer" class="tutor-container"
-    % if bidi:
-      dir=${bidi}
-    % endif
-  > 
-    <div class="footer-top">
-      <div class="powered-area">
-        % if not hide_openedx_link:
-        <ul class="logo-list">
-          <li>${_('Powered by:')}</li>
-          <li>
-            <a href="https://docs.tutor.edly.io" rel="noopener" target="_blank">
-              <img src="${static.url('images/tutor-logo.png')}" alt="${_('Runs on Tutor')}" width="80"/>
-            </a>
-          </li>
-          <li>
-            <a href="${footer['openedx_link']['url']}" rel="noopener" target="_blank">
-              <img src="${static.url('images/openedx-logo.png')}" alt="${footer['openedx_link']['title']}" width="79"/>
-            </a>
-          </li>
-        </ul>
-        % endif
-      </div>
+<%
+  # Fallback an toàn cho context/brand
+  footer = get_footer(is_secure=is_secure) or {}
+  openedx_link = footer.get('openedx_link', {}) or {}
+  openedx_link_url = openedx_link.get('url', 'https://openedx.org')
+  openedx_link_title = openedx_link.get('title', 'Open edX')
 
-      ## ---- Custom grid (ported from index.html) ----
-      <div class="footer-grid" style="max-width:1200px;margin:2rem auto 0;display:grid;gap:2rem;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));">
-        <div class="footer-col">
-          <h4 style="margin:0 0 1rem 0;">${_('About CUSC')}</h4>
-          <p>
-            ${_('The Can Tho University Software Center provides online learning solutions and professional courses in programming, data science, and design.')}
-          </p>
-        </div>
-        <div class="footer-col">
-          <h4 style="margin:0 0 1rem 0;">${_('Quick Links')}</h4>
-          <a href="/courses">${_('Courses')}</a>
-          <a href="/about">${_('About')}</a>
-          <a href="/tos">${_('Terms')}</a>
-          <a href="/privacy">${_('Privacy')}</a>
-        </div>
-        <div class="footer-col">
-          <h4 style="margin:0 0 1rem 0;">${_('Contact')}</h4>
-          <p>Email: info@cusc.vn</p>
-          <p>Phone: +84 292 3835 579</p>
-          <p>Address: 1 Ly Tu Trong St, Ninh Kieu, Can Tho, Vietnam</p>
-        </div>
-      </div>
-      ## ----------------------------------------------
-    </div>
+  hide_openedx_link = context.get('hide_openedx_link', False)
+  bidi = context.get('bidi', None)
+  include_language_selector = context.get('include_language_selector', footer_language_selector_is_enabled())
+  icp_license_info = getattr(settings, 'ICP_LICENSE_INFO', {}) or {}
+%>
 
-    <span class="copyright-site">Copyrights ©${datetime.now().year}. ${_('All Rights Reserved.')}</span>
-
-    <div class="colophon" style="margin-top:1rem;">
-      % if context.get('include_language_selector', footer_language_selector_is_enabled()):
-        <%include file="${static.get_template_path('widgets/footer-language-selector.html')}"/>
-      % endif
-
-      <p class="copyright">
-        ${footer['copyright']}
-        % if icp_license_info.get('icp_license'):
-          ${u" | {text}".format(text=icp_license_info.get('text'))}
-          <a href="${icp_license_info.get('icp_license_link', '#')}">
-            ${u" {icp}".format(icp=icp_license_info.get('icp_license'))}
-          </a>
-        % endif
-      </p>
-    </div>
-  </footer>
-</div>
-% else:
 <div class="wrapper wrapper-footer">
   <footer id="footer" class="tutor-container"
     % if bidi:
@@ -98,21 +38,19 @@
             </a>
           </li>
           <li>
-            <a href="${footer['openedx_link']['url']}" rel="noopener" target="_blank">
-              <img src="${static.url('images/ctu-logo.png')}" alt="${footer['openedx_link']['title']}" width="79"/>
+            <a href="${openedx_link_url}" rel="noopener" target="_blank">
+              <img src="${static.url('images/ctu-logo.png')}" alt="${openedx_link_title}" width="79"/>
             </a>
           </li>
         </ul>
         % endif
       </div>
 
-      ## ---- Custom grid (ported from index.html) ----
+      ## ---- Custom grid ----
       <div class="footer-grid" style="max-width:1200px;margin:2rem auto 0;display:grid;gap:2rem;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));">
         <div class="footer-col">
           <h4 style="margin:0 0 1rem 0;">${_('About CUSC')}</h4>
-          <p>
-            ${_('The Can Tho University Software Center provides online learning solutions and professional courses in programming, data science, and design.')}
-          </p>
+          <p>${_('The Can Tho University Software Center provides online learning solutions and professional courses in programming, data science, and design.')}</p>
         </div>
         <div class="footer-col">
           <h4 style="margin:0 0 1rem 0;">${_('Quick Links')}</h4>
@@ -128,20 +66,19 @@
           <p>Address: 1 Ly Tu Trong St, Ninh Kieu, Can Tho, Vietnam</p>
         </div>
       </div>
-      ## ----------------------------------------------
+      ## ----------------------
     </div>
 
     <span class="copyright-site">Copyrights ©${datetime.now().year}. ${_('All Rights Reserved.')}</span>
 
     <div class="colophon" style="margin-top:1rem;">
-      % if context.get('include_language_selector', footer_language_selector_is_enabled()):
+      % if include_language_selector:
         <%include file="${static.get_template_path('widgets/footer-language-selector.html')}"/>
       % endif
-
       <p class="copyright">
-        ${footer['copyright']}
+        ${footer.get('copyright','')}
         % if icp_license_info.get('icp_license'):
-          ${u" | {text}".format(text=icp_license_info.get('text'))}
+          ${u" | {text}".format(text=icp_license_info.get('text', ''))}
           <a href="${icp_license_info.get('icp_license_link', '#')}">
             ${u" {icp}".format(icp=icp_license_info.get('icp_license'))}
           </a>
@@ -150,18 +87,16 @@
     </div>
   </footer>
 </div>
-% endif
 
-% if include_dependencies:
+% if context.get('include_dependencies', False):
   <%static:js group='base_vendor'/>
   <%static:css group='style-vendor'/>
   <%include file="widgets/segment-io.html"/>
   <%include file="widgets/segment-io-footer.html"/>
 % endif
 
-% if footer_css_urls:
-  % for url in footer_css_urls:
+% if context.get('footer_css_urls'):
+  % for url in context.get('footer_css_urls'):
     <link rel="stylesheet" type="text/css" href="${url}"/>
   % endfor
 % endif
-## ========= /FOOTER =========
